@@ -384,5 +384,8 @@ this repository contains the full copyright notices and license terms. -->
         <record model="ir.message" id="msg_language_code_unique">
             <field name="text">The code on language must be unique.</field>
         </record>
+        <record model="ir.message" id="msg_button_name_unique">
+            <field name="text">The button name in model must be unique.</field>
+        </record>
     </data>
 </tryton>
