@@ -1,3 +1,4 @@
+* Allow to deactivate button access
 * Always return tuple for MultiSelection
 * Use default selectors instead of select
 * Add batch option to push queue tasks
